# kicad-mcp

./: .gitignore  README.md  pyproject.toml
src/kicad_mcp/: __init__.py  circuit_graph.py  circuit_graph_netlist.py  config.py  datasheet_lookup.py  multi_board_graph.py  server.py
